--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,14 @@
-image: python:3.8-alpine
+image: registry.gitlab.com/ajxchapman/sourcemon:latest
 
 stages:
-  - scrape
+  - watch
 
-scrape:
-  stage: scrape
+watch:
+  stage: watch
   script:
-    - ls -la ${watch}
-    - pip install -r requirements.txt
-    - python3 ./scrape.py -c cache.yaml -i ${watch}
+    - curl -Lo cache.yaml "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/artifacts/${CI_COMMIT_REF_NAME}/raw/cache.yaml?job=${CI_BUILD_STAGE}&job_token=${CI_JOB_TOKEN}" || true
+    - python3 ./watch.py -o cache.yaml -i ${watch}
   artifacts:
     paths:
       - cache.yaml
     expire_in: 1 day
-    
-    
