--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ watch:
   stage: watch
   script:
     - curl -Lo cache.yaml "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/artifacts/${CI_COMMIT_REF_NAME}/raw/cache.yaml?job=${CI_BUILD_STAGE}&job_token=${CI_JOB_TOKEN}" || true
-    - python3 ./watch.py -o cache.yaml -i ${watch}
+    - python3 ./watch.py --cache cache.yaml --input ${watch}
   artifacts:
     paths:
       - cache.yaml
