--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,28 @@
-image: registry.gitlab.com/ajxchapman/sourcemon:latest
-
 stages:
+  - build
   - watch
+
+build:
+  stage: build
+  image: docker:20.10
+  services:
+    - docker:20.10-dind
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "push"
+  script:
+    - docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}
+    - docker build -t ${CI_REGISTRY_IMAGE}:latest .
+    - docker push ${CI_REGISTRY_IMAGE}:latest
 
 watch:
   stage: watch
-  script:
-    - git clone "https://${SOURCEMON_WATCH_DEPLOY_CREDENTIALS}@gitlab.com/ajxchapman/sourcemon-watch.git" sourcemon-watch
-    - curl -Lo cache.yaml "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/artifacts/${CI_COMMIT_REF_NAME}/raw/cache.yaml?job=${CI_BUILD_STAGE}&job_token=${CI_JOB_TOKEN}" || true
-    - python3 ./watch.py --cache cache.yaml --input sourcemon-watch/watch.yaml
+  image: ${CI_REGISTRY_IMAGE}:latest
+  script: 
+    - |
+      [ -z "${SOURCEMON_WATCH_REPO_URL}" ] || git clone "${SOURCEMON_WATCH_REPO_URL}" watches
+    - curl -Lo cache.tar.gz "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/artifacts/${CI_COMMIT_REF_NAME}/raw/cache.tar.gz?job=${CI_BUILD_STAGE}&job_token=${CI_JOB_TOKEN}" || true
+    - python3 ./watch.py --cache ./cache.tar.gz --input ./watches/**/*.y*ml
   artifacts:
     paths:
-      - cache.yaml
-    expire_in: 1 day
+      - cache.tar.gz
+    expire_in: 7 days
