--- a/watches/watch_test.yml
+++ b/watches/watch_test.yml
@@ -1,5 +1,5 @@
 watch:
-  cmd: |
-    id
-  sudo: true
-  comment: "Output: {{data}}"
+  - cmd: |
+      id
+    sudo: true
+    comment: "Output: {{data}}"
