--- a/watches/watch_test.yml
+++ b/watches/watch_test.yml
@@ -1,5 +1,8 @@
 watch:
   - cmd: |
       id
+      ls -lasdfdfsghsdfgsdfg
+      id
     sudo: true
+    output: both
     comment: "Output: {{data}}"
