--- a/watches/watch_test.yml
+++ b/watches/watch_test.yml
@@ -2,7 +2,7 @@ watch:
   - cmd: |
       apt update && apt install -y qemu-utils parted
       modprobe nbd
-      curl -Lo ghes.qcow2 https://github-enterprise.s3.amazonaws.com/kvm/releases/github-enterprise-{{GHES_VERSION}}.qcow2
+      curl -Lo ghes.qcow2 https://github-enterprise.s3.amazonaws.com/kvm/releases/github-enterprise-3.5.2.qcow2
       qemu-nbd --connect=/dev/nbd0 `pwd`/ghes.qcow2
       partprobe /dev/nbd0
       mkdir ghes_volume
