--- a/.github/workflows/watch.yml
+++ b/.github/workflows/watch.yml
@@ -35,7 +35,7 @@ jobs:
           path: watches
 
       - name: Execute watch
-        run: python3 ./watch.py --cache ./cache.tar.gz './watches/**/*.y*ml'
+        run: python3 ./watch.py --cache ./cache.tar.gz ./watches/
 
       - uses: actions/upload-artifact@v3
         with:
