--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,6 +16,12 @@
 		}
 	},
 
+	"build": {
+		"args": {
+		  "BUILDKIT_INLINE_CACHE": "0"
+		}
+	},
+
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 
