--- a/.github/workflows/watch.yml
+++ b/.github/workflows/watch.yml
@@ -17,9 +17,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           ARTIFACT_URL=$(gh api -q '.artifacts[0].archive_download_url' /repos/${{ github.repository }}/actions/artifacts)
-          [ ! -z "${ARTIFACT_URL}" ] && curl -sLo artifact.zip -H "Authorization: token ${GH_TOKEN}" ${ARTIFACT_URL} && unzip artifact.zip
-          rm artifact.zip
-          true
+          [ ! -z "${ARTIFACT_URL}" ] && curl -sLo artifact.zip -H "Authorization: token ${GH_TOKEN}" ${ARTIFACT_URL}
+          [ -f artifact.zip ] file artifact.zip && unzip artifact.zip && rm artifact.zip
 
       - name: Install prerequsites
         run: pip3 install -r requirements.txt
